--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ archives_base_name=xhe_furniture
 
 # Dependencies
 fabric_version=0.92.6+1.20.1
+
+org.gradle.java.home=C:\\Program Files\\Java\\graalvm-jdk-21.0.8+12.1
